--- a/cookbook/templates/cookbook/layout.html
+++ b/cookbook/templates/cookbook/layout.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="{% static 'cookbook/styles.css' %}" rel="stylesheet">
 
+    <meta property="og:title" content="CookBook" />
+    <meta property="og:description" content="My cookbook personal project" />
+    <meta property="og:image" content="" />
+    <meta property="og:url" content="https://cookbook-nthq.onrender.com/" />
+    <meta property="og:type" content="web app" />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     {% block script %}{% endblock %}
     
