--- a/cookbook/templates/cookbook/layout.html
+++ b/cookbook/templates/cookbook/layout.html
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="CookBook" />
     <meta property="og:description" content="My cookbook personal project" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="staticfiles/cookbook/images/og image.jpg" />
     <meta property="og:url" content="https://cookbook-nthq.onrender.com/" />
     <meta property="og:type" content="web app" />
 
