--- a/cookbook/templates/cookbook/layout.html
+++ b/cookbook/templates/cookbook/layout.html
@@ -11,10 +11,15 @@
     <link href="{% static 'cookbook/styles.css' %}" rel="stylesheet">
 
     <meta property="og:title" content="CookBook" />
-    <meta property="og:description" content="My cookbook personal project" />
+    <meta property="og:description" content="My Cookbook Project" />
     <meta property="og:image" content="https://cookbook-nthq.onrender.com/static/cookbook/images/og-image.jpg" />
     <meta property="og:url" content="https://cookbook-nthq.onrender.com/" />
     <meta property="og:type" content="web app" />
+
+    <meta name="twitter:card" content="CookBook" />
+    <meta name="twitter:title" content="My Cookbook Project" />
+    <meta name="twitter:description" content="" />
+    <meta name="twitter:image" content="https://cookbook-nthq.onrender.com/static/cookbook/images/og-image.jpg" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     {% block script %}{% endblock %}
