--- a/cookbook/templates/cookbook/layout.html
+++ b/cookbook/templates/cookbook/layout.html
@@ -10,16 +10,24 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="{% static 'cookbook/styles.css' %}" rel="stylesheet">
 
-    <meta property="og:title" content="CookBook" />
-    <meta property="og:description" content="My Cookbook Project" />
-    <meta property="og:image" content="https://cookbook-nthq.onrender.com/static/cookbook/images/og-image.jpg" />
-    <meta property="og:url" content="https://cookbook-nthq.onrender.com/" />
-    <meta property="og:type" content="web app" />
+    <!-- HTML Meta Tags -->
+<title>CookBook</title>
+<meta name="description" content="My Cookbook Project">
 
-    <meta name="twitter:card" content="CookBook" />
-    <meta name="twitter:title" content="My Cookbook Project" />
-    <meta name="twitter:description" content="" />
-    <meta name="twitter:image" content="https://cookbook-nthq.onrender.com/static/cookbook/images/og-image.jpg" />
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://cookbook-nthq.onrender.com/">
+<meta property="og:type" content="webapp">
+<meta property="og:title" content="CookBook">
+<meta property="og:description" content="My Cookbook Project">
+<meta property="og:image" content="https://cookbook-nthq.onrender.com/static/cookbook/images/og-image.jpg">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="cookbook-nthq.onrender.com">
+  <meta property="twitter:url" content="https://cookbook-nthq.onrender.com/">
+  <meta name="twitter:title" content="CookBook">
+  <meta name="twitter:description" content="My Cookbook Project">
+  <meta name="twitter:image" content="https://cookbook-nthq.onrender.com/static/cookbook/images/og-image.jpg">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     {% block script %}{% endblock %}
